recycled jwt authentication from /Kreuterkeule/MeatMessengerFull

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/pem_production
 spring.datasource.username=postgres
 spring.datasource.password=123
+
+### SPRING SECURITY CONFIGURATOIN ###
+spring.security.filter.order=10
+# space for my own filters
